# microcontroller-rs

./: .gitignore  Cargo.toml  README.md
src/blinker/: main.rs
src/spi_simple/: controller.rs  main.rs
src/spi_simple_accel/: accel.rs  main.rs
