[package]
name = "teensy40"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blinker"
path = "src/blinker/main.rs"

[[bin]]
name = "spi_simple"
path = "src/spi_simple/main.rs"

[[bin]]
name = "do_nothing"
path = "src/do_nothing/main.rs"

[[bin]]
name = "spi_simple_accel"
path = "src/spi_simple_accel/main.rs"

[dependencies]
rtic = { version = "2", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1", default-features = false, features = [
  "cortex-m-systick",
] }

# Remove these if you don't want logging.
imxrt-log = { version = "0.1", default-features = false, features = [
  "log",
  "usbd",
] }
log = { version = "0.4", features = [
  "max_level_debug",
  "release_max_level_info",
] }

embedded-hal = "0.2.7"
teensy4-panic = { version = "0.2", features = ["log"] }

[dependencies.teensy4-bsp]
version = "0.5"
features = [
  # Use the BSP's runtime.
  "rt",
]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
